--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "device-provider",
   "version": "1.0.0",
   "description": "",
-  "main": "ErrorBoundary.js",
+  "main": "./build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,19 @@
     "url": "https://github.com/Alexsfv/test-library-react/issues"
   },
   "homepage": "https://github.com/Alexsfv/test-library-react#readme",
+  "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
+  },
   "dependencies": {
-    "current-device": "^0.10.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0"
+    "current-device": "^0.10.1",
+    "node-sass": "^4.14.1"
   }
 }
